Trying to fix incorrectly displayed ad on small tablets

--- a/beta/css/style.css
+++ b/beta/css/style.css
@@ -366,7 +366,7 @@ li {
 }
 
 #instructions p {
-    font-size: 16px;
+    font-size: 15px;
     line-height: 30px;
 }
 
@@ -742,7 +742,7 @@ li {
         padding: 30px 40px 30px 70px;
     }
 
-    #ad_txt {
+    #ad {
         display: none;
     }
 
